fixed minor spacing issues

--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ a {
     grid-row: 1;
 
     display:grid;
-    grid-auto-columns: 1fr;
+    /* grid-auto-columns: 1fr; */
     grid-auto-flow: column;
 }
 
@@ -188,7 +188,7 @@ a {
     color: var(--alt-color);
     background: var(--projects-color);
     border-radius: .5rem;
-    padding: .5rem;
+    padding: 1.5rem;
     margin: .5rem;
 }
 
@@ -198,7 +198,9 @@ a {
 }
 
 .demos small {
+    display: block;
     opacity: .5;
+    padding-bottom: 1rem;
 }
 
 .project img {
